--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/Stelios-Ervis-Priftis/Hangman_Game.git"
   },
-  "author": "DevChronical",
+  "author": "DevChronicle",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Stelios-Ervis-Priftis/Hangman_Game/issues"
